--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Devansh Prajapati</a>
+        Designed by <a href="https://prajapatidevansh.github.io/portfolio/">Devansh Prajapati</a>
       </div>
     </div>
 
