Remove href from service titles in index.html

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Web Designing</a></h4>
+              <h4 class="title"><a class="stretched-link">Web Designing</a></h4>
               <p class="description">I design and develop fast, responsive and modern websites using HTML, css,
                 JavaScript, Bootstrap.My focus is on clean UI, high performance and mobile-friendly layouts.</p>
             </div>
@@ -625,7 +625,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Python Development</a></h4>
+              <h4 class="title"><a class="stretched-link">Python Development</a></h4>
               <p class="description">I create custom Python tools such as automation scripts, file converters, data
                 handling programs and AI-based utilities.My solutions are built for accuracy, speed and real-world
                 usage.</p>
@@ -635,7 +635,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Django Full-Stack Development</a>
+              <h4 class="title"><a class="stretched-link">Django Full-Stack Development</a>
               </h4>
               <p class="description">I build complete web applications including user login, admin panel, dashboard,
                 APIs, database integration and secure backend systems.
@@ -646,7 +646,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">REST API Development</a></h4>
+              <h4 class="title"><a class="stretched-link">REST API Development</a></h4>
               <p class="description">I develop fast and secure REST APIs for mobile apps, websites and third-party
                 integrations.
                 My APIs are well-documented, reliable and easy to integrate.</p>
@@ -656,7 +656,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">SEO Optimization</a></h4>
+              <h4 class="title"><a class="stretched-link">SEO Optimization</a></h4>
               <p class="description">I provide on-page SEO setup including meta tags, speed optimization, keyword
                 placement and Google-friendly structure.
                 This ensures higher ranking, better visibility and more traffic.</p>
@@ -666,7 +666,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Automation & Tools Development</a>
+              <h4 class="title"><a class="stretched-link">Automation And Tools Development</a>
               </h4>
               <p class="description">I create automation tools like Excel processors, mass email systems, SMS systems,
                 file converters, data scrapers and custom utilities.
