--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 January 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://prajapatidevansh.github.io/portfolio/">www.devanshprajapati.in</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9409271651</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Himmatnagar,Gujarat,India</span>
                   </li>
