Add text alignment to paragraph elements
Updated paragraph elements to include justified text alignment for better readability.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p> I am Devansh Prajapati. I am Django Python Full Stack Web Developer. I am very passionate and dedicated to
+        <p style="text-align:justify;"> I am Devansh Prajapati. I am Django Python Full Stack Web Developer. I am very passionate and dedicated to
           my work. I enjoy every step of the development process, from discussion and collaboration to concept and
           execution. Continuous learner of new technologies, strategies and tools.</p>
       </div><!-- End Section Title -->
@@ -109,7 +109,7 @@
           </div>
           <div class="col-lg-8 content">
             <h2>UI & UX Designer &amp; Full Stack Web Developer.</h2>
-            <p class="fst-italic py-3">
+            <p class="fst-italic py-3" style="text-align:justify;">
               I enjoy building modern, responsive, and user-friendly digital experiences that solve real-world
               problems.I believe in writing clean, scalable code and creating designs that reflect both functionality
               and creativity. Every project I work on is a combination of logical thinking, visual aesthetics, and
@@ -135,7 +135,7 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
+            <p class="py-3" style="text-align:justify;">
               My goal is to create professional, impactful, and seamless digital products that not only meet client
               expectations but exceed them. I'm always eager to explore new technologies and bring innovative ideas to
               life.
@@ -202,7 +202,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Over time, I have developed a solid foundation in web development and software design.
+        <p style="text-align:justify;">Over time, I have developed a solid foundation in web development and software design.
           My skills reflect my dedication to writing clean code, building responsive interfaces, and understanding core
           concepts behind modern technologies. I believe in continuous learning and improving my abilities through
           projects, experimentation, and constant practice.</p>
@@ -312,7 +312,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Hello! I’m Devansh Prajapati, a passionate and detail-oriented Full Stack Python Developer Web Developer & UI
+        <p style="text-align:justify;">Hello! I’m Devansh Prajapati, a passionate and detail-oriented Full Stack Python Developer Web Developer & UI
           & UX Designer. I enjoy building modern, responsive, and user-friendly digital experiences that solve
           real-world problems.</p>
       </div><!-- End Section Title -->
@@ -326,7 +326,7 @@
 
             <div class="resume-item pb-0">
               <h4>Devansh Prajapati</h4>
-              <p><em>A detail-oriented and creative Full Stack / Frontend Developer with hands-on experience in building
+              <p style="text-align:justify;"><em>A detail-oriented and creative Full Stack / Frontend Developer with hands-on experience in building
                   web applications and projects. I have a strong foundation in modern web technologies and a keen
                   interest in UI/UX.
                   I thrive in environments where I can learn, grow, and contribute to building impactful digital
@@ -343,7 +343,7 @@
               <h4>B.E Computer</h4>
               <h5>2019 - 2023</h5>
               <p><em>Samarth Collage Of Engineering And Technology</em></p>
-              <p>Focused on learning programming fundamentals and completed multiple projects to build practical
+              <p style="text-align:justify;">Focused on learning programming fundamentals and completed multiple projects to build practical
                 knowledge.</p>
             </div><!-- Edn Resume Item -->
 
@@ -351,7 +351,7 @@
               <h4>S.S.C & H.S.C</h4>
               <h5>2007 - 2019</h5>
               <p><em>Jainacharya Anand Ghansuri Vidhyalay</em></p>
-              <p>Completed higher secondary education with focus on science.Developed interest in technology and coding
+              <p style="text-align:justify;">Completed higher secondary education with focus on science.Developed interest in technology and coding
                 during school years.Participated in extra-curricular activities and maintained good academic
                 performance.</p>
             </div><!-- Edn Resume Item -->
@@ -364,7 +364,7 @@
               <h4>Full Stack Python Developer As Intern</h4>
               <h5>2025 - Present</h5>
               <p><em>Depple Soft,Himmatnagar,Gujarat,India</em></p>
-              <ul>
+              <ul style="text-align:justify;">
                 <li>Lead in the design, development, and implementation of the graphic, layout, and Python Django
                   Development</li>
                 <li>Delegate tasks to the 7 members of the design & Development team and provide counsel on all aspects
@@ -380,7 +380,7 @@
               <h4>Full Stack Python Developer Training</h4>
               <h5>2024 - 2025</h5>
               <p><em>Depple Soft,Himmatnagar,Gujarat,India</em></p>
-              <ul>
+              <ul style="text-align:justify;">
                 <li>learn How To Make Website,logos, brochures,infographics, presentations, and advertisements.</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
@@ -402,7 +402,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>This portfolio features a collection of projects I developed as part of my practical learning and
+        <p style="text-align:justify;">This portfolio features a collection of projects I developed as part of my practical learning and
           self-practice. I focus on writing clean code, creating visually appealing designs, and building responsive
           layouts. These projects represent my growing expertise in web technologies and my dedication to continuous
           improvement.</p>
@@ -604,7 +604,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>My services are focused on creating simple, modern and effective digital solutions. I work with a
+        <p style="text-align:justify;">My services are focused on creating simple, modern and effective digital solutions. I work with a
           client-first approach, ensuring quality, performance and long-term reliability in every project.</p>
       </div><!-- End Section Title -->
 
@@ -616,7 +616,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">Web Designing</a></h4>
-              <p class="description">I design and develop fast, responsive and modern websites using HTML, css,
+              <p class="description" style="text-align:justify;">I design and develop fast, responsive and modern websites using HTML, css,
                 JavaScript, Bootstrap.My focus is on clean UI, high performance and mobile-friendly layouts.</p>
             </div>
           </div>
@@ -626,7 +626,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">Python Development</a></h4>
-              <p class="description">I create custom Python tools such as automation scripts, file converters, data
+              <p class="description" style="text-align:justify;">I create custom Python tools such as automation scripts, file converters, data
                 handling programs and AI-based utilities.My solutions are built for accuracy, speed and real-world
                 usage.</p>
             </div>
@@ -637,7 +637,7 @@
             <div>
               <h4 class="title"><a class="stretched-link">Django Full-Stack Development</a>
               </h4>
-              <p class="description">I build complete web applications including user login, admin panel, dashboard,
+              <p class="description" style="text-align:justify;">I build complete web applications including user login, admin panel, dashboard,
                 APIs, database integration and secure backend systems.
                 Every project is optimized, scalable and production-ready.</p>
             </div>
@@ -647,7 +647,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">REST API Development</a></h4>
-              <p class="description">I develop fast and secure REST APIs for mobile apps, websites and third-party
+              <p class="description" style="text-align:justify;">I develop fast and secure REST APIs for mobile apps, websites and third-party
                 integrations.
                 My APIs are well-documented, reliable and easy to integrate.</p>
             </div>
@@ -657,7 +657,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">SEO Optimization</a></h4>
-              <p class="description">I provide on-page SEO setup including meta tags, speed optimization, keyword
+              <p class="description" style="text-align:justify;">I provide on-page SEO setup including meta tags, speed optimization, keyword
                 placement and Google-friendly structure.
                 This ensures higher ranking, better visibility and more traffic.</p>
             </div>
@@ -668,7 +668,7 @@
             <div>
               <h4 class="title"><a class="stretched-link">Automation And Tools Development</a>
               </h4>
-              <p class="description">I create automation tools like Excel processors, mass email systems, SMS systems,
+              <p class="description" style="text-align:justify;">I create automation tools like Excel processors, mass email systems, SMS systems,
                 file converters, data scrapers and custom utilities.
                 These tools reduce manual work and increase efficiency.</p>
             </div>
@@ -686,7 +686,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>A few words from clients and colleagues who trusted me with their projects.</p>
+        <p style="text-align:justify;">A few words from clients and colleagues who trusted me with their projects.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -723,8 +723,8 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span> “Devansh delivered the project exactly the way I wanted. Clean design, fast website and
-                    excellent communication throughout the work.”</span>
+                  <span style="text-align:justify;">Devansh delivered the project exactly the way I wanted. Clean design, fast website and
+                    excellent communication throughout the work.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <h3>Priyank Patel</h3>
@@ -736,8 +736,8 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>“He is extremely skilled in Python and Django. The tool he created for us saved hours of manual
-                    work. Highly recommended!”</span>
+                  <span style="text-align:justify;">He is extremely skilled in Python and Django. The tool he created for us saved hours of manual
+                    work. Highly recommended!</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <h3>Jay Prajapati</h3>
@@ -749,8 +749,8 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>“Very professional and hardworking. He understands the requirements clearly and provides the
-                    best solution within time.”</span>
+                  <span style="text-align:justify;">Very professional and hardworking. He understands the requirements clearly and provides the
+                    best solution within time.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <h3>Deep Patel</h3>
@@ -762,8 +762,8 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>“Our website was slow and outdated. Devansh optimized everything and now it loads super fast.
-                    Great work!”</span>
+                  <span style="text-align:justify;">Our website was slow and outdated. Devansh optimized everything and now it loads super fast.
+                    Great work!</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <h3>Shyam Patel</h3>
@@ -785,7 +785,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>For job opportunities, collaborations or interviews, you can contact me anytime.I respond quickly and
+        <p style="text-align:justify;">For job opportunities, collaborations or interviews, you can contact me anytime.I respond quickly and
           professionally.</p>
       </div><!-- End Section Title -->
 
