Fix typo in service item title

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a class="stretched-link">Automation And Tools Development</a>
+              <h4 class="title"><a class="stretched-link">Automation & Tools Development</a>
               </h4>
               <p class="description" style="text-align:justify;">I create automation tools like Excel processors, mass email systems, SMS systems,
                 file converters, data scrapers and custom utilities.
